[gd_scene load_steps=8 format=2]

[ext_resource path="res://TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://fonts/title_big.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/title_small.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/MenuItem.tres" type="DynamicFont" id=4]
[ext_resource path="res://sounds/duck_intro.ogg" type="AudioStream" id=5]
[ext_resource path="res://SettingsPage.tscn" type="PackedScene" id=6]
[ext_resource path="res://CreditsPage.tscn" type="PackedScene" id=7]

[node name="TitleScreen" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 358.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 45.0
margin_top = 47.0
margin_right = 1234.0
margin_bottom = 310.0

[node name="Title" type="Label" parent="VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 548.0
margin_bottom = 263.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "Dawn"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 552.0
margin_right = 705.0
margin_bottom = 263.0
custom_constants/separation = -80

[node name="Title3" type="Label" parent="VBoxContainer/CenterContainer/HBoxContainer/VBoxContainer"]
margin_right = 153.0
margin_bottom = 129.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "of"
align = 1
valign = 2

[node name="Title4" type="Label" parent="VBoxContainer/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 153.0
margin_bottom = 178.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "the"
align = 1

[node name="Title2" type="Label" parent="VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 709.0
margin_right = 1189.0
margin_bottom = 263.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "Duck"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 362.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_vertical = 3
custom_constants/margin_left = 100

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 100.0
margin_right = 299.0
margin_bottom = 276.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="StartButton" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 199.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.752941, 0.752941, 0.752941, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
text = "Start"
flat = true
align = 0

[node name="SettingsButton" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 199.0
margin_bottom = 136.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.752941, 0.752941, 0.752941, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
text = "Settings"
flat = true
align = 0

[node name="CreditsButton" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 199.0
margin_bottom = 206.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.752941, 0.752941, 0.752941, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
text = "Credits"
flat = true
align = 0

[node name="Quit" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 210.0
margin_right = 199.0
margin_bottom = 276.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.752941, 0.752941, 0.752941, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
text = "Quit"
flat = true
align = 0

[node name="IntroSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="PopupContainer" type="CenterContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="SettingsPage" parent="PopupContainer" instance=ExtResource( 6 )]
margin_left = 440.0
margin_top = 210.0
margin_right = 840.0
margin_bottom = 510.0

[node name="CreditsPage" parent="PopupContainer" instance=ExtResource( 7 )]
margin_left = 320.0
margin_top = 120.0
margin_right = 960.0
margin_bottom = 600.0
size_flags_horizontal = 0
size_flags_vertical = 0
color = Color( 0.501961, 0.501961, 0.501961, 0.941176 )
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="gui_input" from="PopupContainer" to="." method="_on_PopupContainer_gui_input"]
